--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,5 +1,4 @@
 #hamburger-button {
-    background-color: blueviolet;
     position: fixed;
     top: 0;
     left: 0;
