--- a/styles/pagination.css
+++ b/styles/pagination.css
@@ -3,6 +3,7 @@
     margin: auto;
     width: 100%;
     display: flex;
+    flex-wrap: nowrap;
     justify-content: space-between;
 }
 
